[project]
name = "agenticbloggenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langgraph>=0.6.2",
    "langgraph-cli[inmem,inmemory]>=0.3.6",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
